# test_systemd_API

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: base.Dockerfile  devcontainer.json
proj_1/: CMakeLists.txt
proj_1/include/: SysDLogger.h  proj1_header.h
proj_1/resources/: my_test_systemd.service
proj_1/src/: SysDLogger.cpp  main.cpp
proj_2/: CMakeLists.txt
proj_2/include/: proj2_header.h
proj_2/src/: main.cpp
